gcc/testsuite/rust/rustc/ui/directory_ownership/non-inline-mod-restriction.rs
// Test that non-inline modules are not allowed inside blocks.

fn main() {
    mod foo; // { dg-error "" "" { target *-*-* } }
}

